30-04-2004 :
 - wxbRestorePanel : Added "Cancel" button to cancel restore at
     all state of restore process.
 - wxbMainFrame : Added "Send" button
 - wxbRestorePanel (first configure) : Changed defaults values when
     Job Name changes
 - wxbRestorePanel (first configure) : corrected problem when bad
     parameters are chosen
 - wxbRestorePanel : Checking more carefully which job we just have run
 - wxbRestorePanel : Using wxStopWatch instead of GetTicks to manage
     timeouts.
 - wxbMainFrame : Added "Command: " in front of the command window
     so that the user knows he can type into the command line
     (thanks to Kern)
 - wxbMainFrame : Fixed 100% CPU usage in GTK : added buffering when
     receiving data to print to the console (thanks to Phil)
 - wxbRestorePanel : Fixed 100% CPU usage in GTK : added sleeps between
     Yields.

29-04-2004 :
 - wxbRestorePanel : Modified the way a restore is started : much
     more parameters are modifiable.
 - wxbConfigPanel : Created a generic panel which can be used
     to setup configuration parameters (for example when restoring)

27-04-2004 :
 - wxbMainFrame : others panels are locked when a command is ran
     directly by typing in the console.
 - wxbRestorePanel : Updated update interval of the progress bar
     when restoring
     
26-04-2004 :
 - Corrected a bug in Windows which causes wx-console to crash when
     typing quit before exiting the application.

25-04-2004 :
 - general : status text is more often used
 - wxbRestorePanel : restore aborted if there's no client or no fileset
 - wxbRestorePanel : corrected problem if one double clicks on a
     directory X in the left "tree" window when the directory is 
     not yet open, instead of selecting the directory and everything 
     below, it opens the directory and nothing is selected.
 - wxbRestorePanel : first client is selected when restore
     mode starts.
 - wxbRestorePanel : when the director is building tree, 